# cmake_demo

./: .gitignore  CMakeLists.txt  readme.md
.vimprj/: prj.vim
hello_world/: CMakeLists.txt
lib_cat/: CMakeLists.txt  configVersion.hpp.in  source.cmake
lib_cat/include/: lib_cat_EXPORTS.h
lib_cat/include/cat/: cat.hpp
lib_cat/src/cat/: cat.cpp  cat.hh
lib_ext/: CMakeLists.txt  configVersion.hpp.in  source.cmake
lib_ext/include/: ext.hpp  lib_ext_EXPORTS.h
lib_ext/src/: ext.cpp
main/: CMakeLists.txt  configVersion.hpp.in  source.cmake
main/include/dog/: dog.hpp
main/src/: main.cpp
main/src/dog/: dog.cpp  dog.hh
